--- a/vite/howdoi.html
+++ b/vite/howdoi.html
@@ -98,8 +98,9 @@
         }
       }
     </style>
+
     <div class="ui text container">
-      <div id="chat"></div>
+      <div id="chat" data-history="{{history}}"></div>
     </div>
 
     <script type="module" src="/src/main.js"></script>
